# hybrid_sso_catalogue

./: .gitignore  KD Tree Exploration.ipynb  README.md  create_hybrid.ipynb  merge_catalogues.py  setup.cfg  setup.py  transform_orbits.ipynb
density/: estimate.ipynb  investigate.ipynb  sample.ipynb
density_estimation/: 598_wi_project.ipynb  estimate.ipynb
digest2/: Makefile
hybridcat/: merge.py  pipeline.py  setup.cfg  setup.py  transform.py
hybridcat/hybridcat/: data.py  merge.py  pipeline.py  transform.py  transform_orbits.py
lsst-hybrid-catalogue/: LICENSE.rst  README.md  pipeline.py  setup.cfg
lsst-merge-catalogues/: LICENSE.rst  merge_catalogues.py
lsst_detection_probability/: Ephemerides Stuff.ipynb  Predict misses.ipynb  Scheduling.ipynb  Tracklets Ephemerides Stuff.ipynb  detection_probability.py  findable_tables.py  magnitudes.py  run.py  scheduling.py  variant_orbits.py
lsst_detection_probability/predicted_schedules/: get_schedules.sh
merge/: KD Tree Exploration.ipynb  create_hybrid.ipynb  data.py  get_data.ipynb  pipeline.py  transform_orbits.py
neocp/: difi_combiner.py  difi_runner.py  digest2 Improvements.ipynb  digest2 Score Analysis.ipynb  digest2_attempts.ipynb  helpers.py  lsst_neocp.py  neocp_environment.yml
neocp/neo/: convert.sh
notebooks/: Code for Joachim.ipynb  get_data.ipynb  transform_orbits.ipynb
paper/: paper.bib  paper.tex
paper/notebooks/: assess_hybrid.ipynb
paper/sections/: abstract.tex  introduction.tex  methods.tex  results.tex
scratch/: Untitled.ipynb  check new pipeline.ipynb  difi full run.ipynb  orbits_plot.ipynb  pools.py  rubin_sim_tests.ipynb
