[metadata]
name = hybridcat
url = https://github.com/dirac-institute/hybrid_sso_catalogue
author = Tom Wagg
author_email = tomjwagg@gmail.com
license = MIT
license_file = LICENSE.rst
description = Small package for merging MPCORB and S3M into a hybrid LSST catalogue.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
packages = find: 
install_requires = 
    numpy >= 1.20
    astropy >= 4.3
    pandas >= 1.3
    h5py >= 3.2
    scipy >= 1.7
    dask >= 2021.10
