[metadata]
name = lsst-hybrid-catalogue
url = https://github.com/dirac-institute/hybrid_sso_catalogue
author = Tom Wagg
author_email = tomjwagg@gmail.com
license = MIT
license_file = LICENSE.rst
description = Small package for merging MPCORB and S3M into a hybrid LSST catalogue.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find: 
install_requires = 
    pyoorb
    numpy
    astropy
    pandas
    h5py
    scipy
    dask
    pickle

[flake8]
max-line-length = 110